--- a/src/Components/Cards/cards.module.css
+++ b/src/Components/Cards/cards.module.css
@@ -1,6 +1,6 @@
 .cards{
     width: 300px;
-    height: 300px;
+    height: 240px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -25,4 +25,28 @@
     justify-content: space-between;
     align-items: center;
     width: 80%;
+}
+
+.priceContainer{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn{
+    display: flex;
+    gap: 10px;
+}
+
+.btn button{
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #f9d9aa;
+}
+
+span{
+    background-color: #f9d9aa;
+    border-radius: 30px;
+    font-size: 18px;
+    padding: 3px;
 }
